# ppml_project

./: .gitignore  LICENSE  README.md  eda.py  evaluation.py  pyproject.toml  train.py  training.py
data/: create_dataset.py
