[tool.poetry]
name = "ppml-project"
version = "0.1.0"
description = "An attempt to create an ML model that can detect skin cancer in encrypted images"
authors = ["Carter <cartermarkegard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torchvision = "^0.18.0"
pandas = "^2.2.2"
torch = "^2.3.0"
numpy = "^1.26.4"
tenseal = "^0.3.14"
matplotlib = "^3.9.0"
pillow = "^10.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
